v3.10.0 (XXXX-XX-XX)
--------------------

* Fixed SEARCH-366: Fixed extracting sub-attributes using projections for the
  `_id` attribute (e.g. `RETURN doc.sub._id`).

* Fixed SEARCH-368: Fixed handling of array comparison for inverted index.

* Fix get snapshot on single server for search-alias view when index was removed.

* Fix waitForSync options for SEARCH in non-maintainer build.

* Fix SEARCH-340 and SEARCH-341: add stats and metrics for inverted index.

* Fixed SEARCH-334 Added searchField option for inverted index.

* Fixed SEARCH-376 Assertion fixed for non-array value in array comparison.

* Fixed BTS-926: UI showing the "create index" form to non-admin users.

* Added startup option `--arangosearch.skip-recovery` to skip the recovery of
  arangosearch view links or inverted indexes.
  The startup option can be specified multiple times and is expected to either
  contain the string `all` (will skip the recovery for all view links and
  inverted indexes) or a collection name + link id/name pair (e.g.
  `testCollection/123456`, where `123456` is a link/index id or an index name).
  This new startup option is an emergency means to speed up lengthy recovery
  procedures when there is a large WAL backlog to replay. The normal recovery
  will still take place even with the option set, but recovery data for
  links/indexes can be skipped. This can improve the recovery speed and reduce
  memory usage during the recovery process.
  All links or inverted indexes that are marked as to-be-skipped via the option,
  but for which there is recovery data, will be marked as "out of sync" at the
  end of the recovery.
  The recovery procedure will also print a list of links/indexes which it has
  marked as out-of-sync.
  Additionally, if committing data for a link/index fails for whatever reason,
  the link/index is also marked as being out-of-sync.

  If an out-of-sync link or index can be used in queries depends on another new